[project]
dependencies = [
    "ampform",
    "black",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "mpl-interactions",
    "qrules",
    "scipy",
]
name = "technical-report"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN20",
    "ARG00",
    "B008",
    "B023",
    "COM812",
    "CPY001",
    "D",
    "E731",
    "F821",
    "ISC001",
    "N806",
    "N816",
    "PLC2701",
    "PLR0913",
    "PLR0917",
    "RUF027",
    "S404",
    "S603",
]
select = ["ALL"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = ["_print"]

[tool.uv.workspace]
