[project]
dependencies = [
    "ampform[viz]",
    "ipympl",
    "ipywidgets",
    "mpl-interactions",
]
name = "technical-report"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN202",
    "ARG001",
    "C901",
    "COM812",
    "CPY001",
    "D",
    "F404",
    "F821",
    "ISC001",
    "N80",
    "N816",
    "PLR091",
    "PLR2004",
    "S404",
    "S603",
    "SLF001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.uv.workspace]
