[project]
dependencies = [
    "ampform~=0.10.5",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "mpl-interactions",
]
name = "technical-report"
requires-python = "~=3.10.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN202",
    "ARG002",
    "C901",
    "COM812",
    "CPY001",
    "D",
    "F404",
    "FURB113",
    "ISC001",
    "N80",
    "PLR091",
    "PYI034",
    "S404",
    "S603",
    "SLF001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.uv.workspace]
