[project]
dependencies = [
    "ampform~=0.12.6",
    "tensorwaves[jax,pwa]~=0.4.8",
]
name = "technical-report"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "COM812",
    "CPY001",
    "D",
    "ISC001",
    "S101",
]
select = ["ALL"]

[tool.uv.workspace]
