[project]
dependencies = [
    "ampform[viz] @ git+https://github.com/ComPWA/ampform@3ed3ed5",
    "ipywidgets",
    "sympy~=1.9.0",
]
name = "technical-report"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN201",
    "ARG002",
    "COM812",
    "CPY001",
    "D",
    "E741",
    "F404",
    "ISC001",
    "PLC0415",
    "PLC2701",
    "PLR0914",
    "PLR2004",
    "PYI034",
    "RUF069",
    "S101",
    "SIM108",
    "TC003",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-self]
ignore-names = ["_print"]

[tool.uv.workspace]
