[project]
dependencies = [
    "ampform",
    "black",
    "matplotlib",
    "scipy",
    "sympy",
]
name = "technical-report"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN20",
    "ARG002",
    "C408",
    "COM812",
    "CPY001",
    "D",
    "ISC001",
    "PLC2701",
]
select = ["ALL"]

[tool.ruff.lint.flake8-self]
ignore-names = ["_print"]

[tool.uv.workspace]
