[project]
dependencies = [
    "ampform",
    "matplotlib",
    "nbformat>=4.2.0",
    "plotly",
    "sympy",
]
name = "technical-report"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "COM812",
    "CPY001",
    "D",
    "E741",
    "F404",
    "ISC001",
    "N816",
    "RUF027",
    "S307",
]
select = ["ALL"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.uv.workspace]
