[project]
dependencies = [
    "ampform",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "nbformat>=4.2.0",
    "plotly",
    "sympy",
]
name = "technical-report"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN20",
    "ARG002",
    "COM812",
    "CPY001",
    "D",
    "E741",
    "F404",
    "ISC001",
    "N80",
    "N816",
    "PLW0603",
    "RUF027",
    "S307",
    "S404",
    "S603",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = ["_print"]

[tool.uv.workspace]
