[project]
dependencies = [
    "ampform",
    "sympy",
]
name = "technical-report"
requires-python = "~=3.13.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "COM812",
    "CPY001",
    "D",
    "E741",
    "F404",
    "FBT00",
    "ISC001",
    "N806",
    "N816",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.uv.workspace]
