[project]
dependencies = [
    "ampform[viz]",
    "matplotlib",
    "pandas",
    "tensorwaves[jax,pwa]",
]
name = "technical-report"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN201",
    "COM812",
    "CPY001",
    "D",
    "E501",
    "F404",
    "FBT00",
    "ISC001",
    "N806",
    "PD901",
    "PLC2401",
    "PLR0913",
    "PLR0917",
    "S101",
    "TCH002",
]
select = ["ALL"]

[tool.uv.workspace]
