[project]
dependencies = [
    "ampform",
    "sympy",
]
name = "technical-report"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "CPY001",
    "D103",
    "D203",
    "D212",
]
select = ["ALL"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.uv.workspace]
