[project]
dependencies = [
    "ampform-dpd~=0.2.3",
    "ampform[viz]",
    "tensorwaves[jax,phsp]",
]
name = "technical-report"
requires-python = "~=3.12.0"
version = "0.1.0"

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "B018",
    "COM812",
    "CPY001",
    "D",
    "E303",
    "E501",
    "PLC2701",
    "S101",
    "T201",
    "TC00",
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.uv.workspace]
